# balance

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: build-arm.yml
apps/dashboard/: .cta.json  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/dashboard/src/: main.tsx  routeTree.gen.ts
apps/dashboard/src/config/: global-context.tsx  query.tsx  router.tsx
apps/dashboard/src/dto/: food.ts
apps/dashboard/src/features/alert/components/: alert-provider.tsx  global-alert.tsx
apps/dashboard/src/features/foods/: mutations.ts  queries.ts  types.ts
apps/dashboard/src/features/user-menu/: queries.ts  types.ts
apps/dashboard/src/foods/: create-food-dialog.tsx  food-item.tsx  foods.tsx  page.tsx  queries.ts  update-food-dialog.tsx
apps/dashboard/src/routes/: __root.tsx  foods.tsx  index.tsx  login.tsx  test.tsx
apps/dashboard/src/utils/: api-fetch.ts  to-default-values.ts
apps/server/: Cargo.toml  README.md  api.http
apps/server/src/: main.rs
apps/server/src/config/: openapi.rs
apps/server/src/connectors/: db.rs  food.rs  gemini.rs  meal.rs  mod.rs  user.rs
apps/server/src/modules/: mod.rs
apps/server/src/modules/auth/: auth.rs  google.rs  jwt.rs  middleware.rs  mod.rs  routes.rs
apps/server/src/modules/food/: dto.rs  handlers.rs  mod.rs  model.rs  routes.rs
apps/server/src/modules/meal/: dto.rs  handlers.rs  model.rs  routes.rs
apps/server/src/modules/user/: dto.rs  handlers.rs  routes.rs
apps/server/src/shared/: error.rs  mod.rs  response.rs  validate.rs
(+10 files in other folders)
