[package]
name = "server"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.1"
bigdecimal = { version = "0.4.8", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
oauth2 = "5.0.0"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "bigdecimal",
] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "macros"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
